Testing without iffe

--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,7 @@ there in the future</p>
   <script>
 
 setTimeout( () => console.log("test"), 1000);
-setTimeout( () => console.log(data), 1000);
+setTimeout( () => console.log(data.listItems), 1000);
 
 
 
