--- a/public/index.html
+++ b/public/index.html
@@ -197,6 +197,7 @@ there in the future</p>
 
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/app.js"></script>
   <script>
 
 setTimeout( () => console.log("test"), 1000);
