--- a/public/index.html
+++ b/public/index.html
@@ -200,8 +200,8 @@ there in the future</p>
   <script src="js/app.js"></script>
   <script>
 
-setTimeout( () => console.log("test"), 1000);
-setTimeout( () => console.log(data.listItems), 1000);
+// setTimeout( () => console.log("test"), 1000);
+// setTimeout( () => console.log(data.listItems), 1000);
 
 
 
